// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GratitudeLine > renders the BrowserViewDeleteButton 1`] = `
<div
  class="group/button absolute -left-5 flex h-full w-10 items-center justify-center"
  role="browser-view-delete-button"
>
  <svg
    class="lucide lucide-x size-5 cursor-pointer text-destructive opacity-0 group-hover/button:opacity-100"
    fill="none"
    height="24"
    role="x-delete-button"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18"
    />
    <path
      d="m6 6 12 12"
    />
  </svg>
  <svg
    class="lucide lucide-ellipsis-vertical absolute size-5 cursor-pointer opacity-0 group-hover/button:invisible group-hover/line:opacity-50"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="1"
    />
    <circle
      cx="12"
      cy="5"
      r="1"
    />
    <circle
      cx="12"
      cy="19"
      r="1"
    />
  </svg>
</div>
`;

exports[`GratitudeLine > renders the MobileViewDeleteButton 1`] = `
<svg
  class="lucide lucide-ellipsis-vertical absolute -left-3 size-5 cursor-pointer opacity-50"
  fill="none"
  height="24"
  role="mobile-view-delete-button"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="1"
  />
  <circle
    cx="12"
    cy="5"
    r="1"
  />
  <circle
    cx="12"
    cy="19"
    r="1"
  />
</svg>
`;
